--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -4,19 +4,25 @@
   --foreground-color: #ffffff;
   --highlight-background-color: #ffe500;
   --highlight-foreground-color: #000000;
+  --chat-font: "Alegreya";
+  --chat-info-font: "Oswald";
+  --h1-font: "Blood Crow";
+  --h2-font: "FetteTrumpDeutsch";
+  --h3-font: "Old Cupboard";
   --item-font: "Special Elite";
-  --name-font: "Blood Crow";
-  --title-font: "FetteTrumpDeutsch";
-  --subtitle-font: "Old Cupboard";
 }
 
 /* ====================== */
 /* Fonts */
 /* ====================== */
-@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Oswald&family=Special+Elite&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Alegreya&family=Lato&family=Oswald&family=Special+Elite&display=swap");
 @font-face {
   font-family: "Blood Crow";
   src: url("../fonts/bloodcrow.ttf") format("truetype");
+}
+@font-face {
+  font-family: "Calling Code Regular";
+  src: url("../fonts/CallingCode-Regular.ttf") format("truetype");
 }
 @font-face {
   font-family: "FetteTrumpDeutsch";
@@ -172,7 +178,7 @@
   border: 1px solid #7a7971;
   border-radius: 0;
   color: var(--foreground-color);
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14px;
   resize: none;
 }
@@ -192,7 +198,7 @@
 .morkborg.sheet .editor {
   color: var(--foreground-color);
   border: 1px solid #7a7971;
-  font-family: "Special Elite";
+  font-family: var(--item-font);
 }
 .morkborg.sheet .tox.tox-tinymce .tox-edit-area__iframe {
   background: var(--background-color);
@@ -215,7 +221,7 @@
 .morkborg.sheet .sheet-tabs {
   flex: 0 0 30px;
   margin-bottom: 5px;
-  font-family: "Modesto Condensed", "Palatino Linotype", serif;
+  /* font-family: "Modesto Condensed", "Palatino Linotype", serif; */
   font-size: 20px;
   font-weight: 700;
   /* TODO: track down the border-top and border-bottom getting inherited on these */
@@ -223,7 +229,7 @@
   border-bottom: none;
 }
 .morkborg.sheet .sheet-tabs .item {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 22px;
   height: 30px;
   line-height: 32px;
@@ -253,7 +259,7 @@
 /* Actor sheet */
 /* ====================== */
 .morkborg.sheet.actor .rule-text {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 10pt;
 }
 /* ====================== */
@@ -275,13 +281,13 @@
   padding: 0;
 }
 .morkborg.sheet.actor .stat-label {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 22px;
   margin-right: 10px;
 }
 .morkborg.sheet.actor .stat-input {
   border: 1px solid #7a7971;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
   text-align: center;
   padding-top: 8px;
@@ -289,7 +295,7 @@
   color: var(--foreground-color);
 }
 .morkborg.sheet.actor .stat-value {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
   text-align: center;
   width: 50px;
@@ -330,8 +336,9 @@
   width: 200px;
 }
 .morkborg.sheet.actor input[type="text"].actor-name {
-  font-family: "Blood Crow", fantasy, serif;
+  font-family: var(--h1-font);
   font-size: 38px;
+  text-transform: uppercase;
 }
 .morkborg.sheet.actor.character .sheet-header .name-row {
   flex: 0 0 50px;
@@ -358,7 +365,7 @@
   margin-right: 5px;
 }
 .morkborg.sheet.actor.character .sheet-header .classname-row label.classname {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 28px;
   width: 100%;
 }
@@ -434,7 +441,7 @@
   text-align: center;
   border-radius: 100%;
   font-size: 10pt;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   left: 0;
   top: 50%;
 }
@@ -454,7 +461,7 @@
   margin-bottom: 0;
 }
 .morkborg.sheet.actor.character .sheet-header .ability-label {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 24px;
   margin-left: 5px;
   margin-top: 5px;
@@ -462,7 +469,7 @@
 }
 .morkborg.sheet.actor.character .sheet-header .ability-input {
   border: 1px solid #7a7971;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
   text-align: center;
   padding: 5px;
@@ -489,7 +496,7 @@
 }
 .morkborg .items-list .items-header .item-name {
   /*padding-left: 5px;*/
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 24px;
 }
 .morkborg .item-list {
@@ -511,11 +518,11 @@
 }
 .morkborg .item-list .item-name {
   margin: 0;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 12pt;
 }
 .morkborg .item-list .item-fields {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 12pt;
   display: flex;
   flex-direction: row;
@@ -545,7 +552,7 @@
   color: var(--highlight-background-color);
 }
 .morkborg .item-list .item-button {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   flex: none;
   width: auto;
@@ -663,7 +670,7 @@
   text-align: center;
   border-radius: 100%;
   font-size: 14pt;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   left: 0;
   /*top: 50%; */
   top: 0%;
@@ -675,7 +682,7 @@
   overflow: hidden;
   line-height: 1;
   text-align: center;
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 10pt;
   left: -5px;
   top: 30px;
@@ -697,7 +704,7 @@
   margin-left: 10px;
   width: 120px;
   margin-bottom: 10px;
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   background-color: var(--foreground-color);
   color: var(--background-color);
@@ -738,7 +745,7 @@
 .morkborg.sheet.actor.character .sheet-body .wield-power-button {
   width: 200px;
   margin-bottom: 10px;
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 24px;
   background-color: var(--foreground-color);
   color: var(--background-color);
@@ -804,7 +811,7 @@ TODO: figure out if we want a 2-col inventory
   margin-left: 10px;
   width: 120px;
   margin-bottom: 10px;
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   background-color: var(--foreground-color);
   color: var(--background-color);
@@ -847,7 +854,7 @@ TODO: figure out if we want a 2-col inventory
   padding-left: 12px;
 }
 .morkborg.sheet.actor.creature .sheet-header .altname-row input[type="text"] {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 24px;
 }
 .morkborg.sheet.actor.creature .sheet-header .hitpoints-row {
@@ -862,17 +869,17 @@ TODO: figure out if we want a 2-col inventory
   margin-bottom: 8px;
 }
 .morkborg.sheet.creature .sheet-body .form-group label {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   text-align: right;
   margin-right: 10px;
 }
 .morkborg.sheet.creature .sheet-body .form-group input {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 .morkborg.sheet.creature .sheet-body .form-group select {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 .morkborg.sheet.creature .sheet-body .form-group.special {
@@ -889,13 +896,13 @@ TODO: figure out if we want a 2-col inventory
   padding: 5px;
 }
 .morkborg.sheet.item .sheet-header .item-name input[type="text"] {
-  font-family: "Blood Crow", fantasy, serif;
+  font-family: var(--h1-font);
   font-size: 38px;
   flex: 1;
   height: 45px;
 }
 .morkborg.sheet.item .sheet-header .item-subtitle {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 24px;
   text-transform: uppercase;
   margin-left: 13px;
@@ -909,17 +916,17 @@ TODO: figure out if we want a 2-col inventory
   margin-bottom: 8px;
 }
 .morkborg.sheet.item .sheet-body .form-group label {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   text-align: right;
   margin-right: 10px;
 }
 .morkborg.sheet.item .sheet-body .form-group input {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 .morkborg.sheet.item .sheet-body .form-group select {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 /* ====================== */
@@ -960,7 +967,7 @@ TODO: figure out if we want a 2-col inventory
   margin-bottom: 8px;
 }
 .morkborg.sheet.actor.follower .sheet-header .altname-row input[type="text"] {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 24px;
 }
 .morkborg.sheet.actor.follower .sheet-header .hitpoints-row {
@@ -975,17 +982,17 @@ TODO: figure out if we want a 2-col inventory
   margin-bottom: 8px;
 }
 .morkborg.sheet.follower .sheet-body .form-group label {
-  font-family: "FetteTrumpDeutsch", fantasy, serif;
+  font-family: var(--h2-font);
   font-size: 20px;
   text-align: right;
   margin-right: 10px;
 }
 .morkborg.sheet.follower .sheet-body .form-group input {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 .morkborg.sheet.follower .sheet-body .form-group select {
-  font-family: "Special Elite", cursive;
+  font-family: var(--item-font);
   font-size: 14pt;
 }
 .morkborg.sheet.follower .sheet-body .form-group.special {
@@ -1151,7 +1158,7 @@ form.editable .results .result-details input[type="text"]:focus {
 .morkborg .button {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 #chat-controls {
   color: var(--foreground-color);
@@ -1177,7 +1184,7 @@ form.editable .results .result-details input[type="text"]:focus {
   border-radius: 0;
   color: var(--foreground-color);
   margin-top: 6px;
-  font-family: "Alegreya", serif;
+  font-family: var(--chat-font);
   font-size: 16px;
 }
 #chat-log .message h4,
@@ -1191,15 +1198,15 @@ form.editable .results .result-details input[type="text"]:focus {
   color: var(--background-color);
 }
 #chat-log .chat-message .message-header .message-sender {
-  font-family: "Blood Crow", fantasy, serif;
+  font-family: var(--h1-font);
   font-size: 20px;
 }
 #chat-log .chat-message .message-header .message-metadata {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--chat-info-font);
   font-size: 12px;
 }
 #chat-log .chat-message .message-header span.flavor-text {
-  font-family: "Oswald", sans-serif;
+  font-family: var(--chat-info-font);
   font-size: 14px;
   font-weight: bold;
   color: var(--foreground-color);
@@ -1218,7 +1225,7 @@ form.editable .results .result-details input[type="text"]:focus {
   color: var(--foreground-color);
   background: var(--background-color);
   border: 2px solid #252525;
-  font-family: "Alegreya", serif;
+  font-family: var(--chat-font);
   font-size: 16px;
 }
 #chat-form textarea:focus {
@@ -1233,7 +1240,7 @@ form.editable .results .result-details input[type="text"]:focus {
   border-bottom: none;
   background: var(--highlight-background-color);
   color: var(--background-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 #client-settings select {
   color: var(--foreground-color);
@@ -1276,12 +1283,12 @@ form.editable .results .result-details input[type="text"]:focus {
 .dialog .dialog-buttons button {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 .dialog .dialog-buttons button.default {
   background: var(--foreground-color);
   color: var(--background-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 form .form-group select {
   color: var(--foreground-color);
@@ -1319,7 +1326,7 @@ select:focus {
 #settings button {
   color: var(--background-color);
   background: var(--foreground-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 #sidebar {
   background: var(--background-color);
@@ -1347,20 +1354,20 @@ select:focus {
   background: var(--foreground-color);
   color: var(--background-color);
   border-radius: 0;
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 .sidebar-tab .directory-header .header-search input {
   background: var(--background-color);
   color: var(--foreground-color);
   border: 1px solid #252525;
   border-radius: 0;
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
 }
 .sidebar-tab .directory-header .header-search input[type="text"]:focus {
   box-shadow: 0 0 5px var(--highlight-background-color);
 }
 .sidebar-tab .directory-list .directory-item h4 {
-  font-family: "Special Elite";
+  font-family: var(--item-font);
 }
 .tabs .item.active,
 .tabs .item:hover {
@@ -1387,14 +1394,14 @@ select:focus {
   overflow-y: hidden;
   padding: 0px;
   margin: 0px;
-  font-family: "Special Elite";
+  font-family: var(--item-font);
   font-weight: 500;
   font-size: 14px;
   line-height: 1.5;
 }
 
 .window-app.app.journal-sheet .window-content h1 {
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
   border-bottom: 2px solid #222222;
 }
 
@@ -1408,12 +1415,12 @@ select:focus {
 
 .journal-sheet form input[name="name"] {
   color: var(--background-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
   font-size: 32px;
 }
 
 .journal-sheet form select {
-  font-family: "Special Elite";
+  font-family: var(--item-font);
 }
 a.entity-link,
 a.inline-roll {
@@ -1434,7 +1441,7 @@ a.inline-roll {
 .roll-card .card-title {
   background: var(--highlight-background-color);
   color: var(--highlight-foreground-color);
-  font-family: "FetteTrumpDeutsch";
+  font-family: var(--h2-font);
   font-size: 20px;
   margin-bottom: 10px;
   text-align: center;
@@ -1446,11 +1453,11 @@ a.inline-roll {
 }
 .roll-card .item-row span.item-name {
   color: var(--foreground-color);
-  font-family: "Special Elite";
+  font-family: var(--item-font);
   font-size: 14px;
 }
 .roll-card .roll-title {
-  font-family: "Alegreya";
+  font-family: var(--chat-font);
   font-size: 16px;
   font-weight: bold;
   text-align: center;
@@ -1458,7 +1465,7 @@ a.inline-roll {
 }
 .roll-card .roll-result {
   border: 1px solid gray;
-  font-family: "Alegreya";
+  font-family: var(--chat-font);
   font-size: 18px;
   margin-bottom: 10px;
   margin-left: 10px;
@@ -1470,13 +1477,13 @@ a.inline-roll {
   font-size: 20px;
 }
 .roll-card .outcome-text {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 28px;
   margin-bottom: 10px;
   text-align: center;
 }
 .roll-card .reaction-text {
-  font-family: "Old Cupboard", serif;
+  font-family: var(--h3-font);
   font-size: 28px;
   text-align: center;
 }
@@ -1503,14 +1510,14 @@ a.inline-roll {
   margin-bottom: 10px;
 }
 .custom-dialog .form-group label {
-  font-family: "FetteTrumpDeutsch";  
+  font-family: var(--h2-font);  
   font-size: 20px;
   margin-right: 10px;
   text-align: right;
 }
 .dialog-button.attack,
 .dialog-button.create {
-  font-family: "FetteTrumpDeutsch";  
+  font-family: var(--h2-font);  
   font-size: 20px;
 }
 .dialog-buttons button.dialog-button:active,
