--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -134,9 +134,9 @@
                                 <div class="tiers">
                                     <label class="stat-label tier-label">{{ localize "MB.Tier" }}:</label>
                                     <ul class="tiers">
-                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="1" {{#ifEq data.equippedArmor.data.currentTier 1}}checked{{/ifEq}}/><span class="tier-num">1</span><span class="tier-dmg">-d2</span></label></li>
-                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="2" {{#ifEq data.equippedArmor.data.currentTier 2}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.maxTier 2}}disabled="true"{{/ifLt}}/><span class="tier-num">2</span><span class="tier-dmg">-d4</span></label></li>
-                                        <li><label><input class="tier-radio" type="radio" name="currentTier" value="3" {{#ifEq data.equippedArmor.data.currentTier 3}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.maxTier 3}}disabled="true"{{/ifLt}}/><span class="tier-num">3</span><span class="tier-dmg">-d6</span></label></li>
+                                        <li><label><input class="tier-radio" type="radio" name="tier.value" value="1" {{#ifEq data.equippedArmor.data.tier.value 1}}checked{{/ifEq}}/><span class="tier-num">1</span><span class="tier-dmg">-d2</span></label></li>
+                                        <li><label><input class="tier-radio" type="radio" name="tier.value" value="2" {{#ifEq data.equippedArmor.data.tier.value 2}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.tier.max 2}}disabled="true"{{/ifLt}}/><span class="tier-num">2</span><span class="tier-dmg">-d4</span></label></li>
+                                        <li><label><input class="tier-radio" type="radio" name="tier.value" value="3" {{#ifEq data.equippedArmor.data.tier.value 3}}checked{{/ifEq}} {{#ifLt data.equippedArmor.data.tier.max 3}}disabled="true"{{/ifLt}}/><span class="tier-num">3</span><span class="tier-dmg">-d6</span></label></li>
                                     </ul>
                                 </div>
                             </div>
