--- a/scss/morkborg.scss
+++ b/scss/morkborg.scss
@@ -1,7 +1,7 @@
-/* TODO: alt yellows #ffe800 #XXXfff160 */
 :root {
   --background-color: #000000;
   --foreground-color: #ffffff;
+  --foreground-alt-color: #ffe900;
   --highlight-background-color: #ffe900;
   --highlight-foreground-color: #000000;
   --chat-font: "Alegreya";
@@ -1087,16 +1087,16 @@ form.editable .results .result-details input[type="text"]:focus {
 }
 /* Fixes hard-to-read dark text on various system Dialogs */
 .window-app .window-content .notes {
-  /* TODO: XXXX mcglincy */
   background-color: var(--highlight-background-color);
   color: var(--highlight-foreground-color);
 }
 .window-app .window-content form .form-header {
   color: var(--foreground-color);
 }
+/* TODO: determine if we need both .notes and form .notes styles specified */
 .window-app .window-content form .notes {
-  background-color: var(--highlight-background-color);
-  color: var(--highlight-foreground-color);
+  background-color: var(--background-color);
+  color: var(--foreground-alt-color);
 }
 .window-app .window-content .form-group span.units {
   background-color: var(--highlight-background-color);
