Add rollable to rest buttons.

--- a/templates/character-sheet.html
+++ b/templates/character-sheet.html
@@ -27,9 +27,9 @@
                     <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
                 </div>
                 <div class="rest-buttons">
-                    <button type="button" class="button item-button rest-button" data-label="rest-short"
+                    <button type="button" class="button item-button rest-button rollable" data-label="rest-short"
                     title="{{localize 'MB.ShortRest'}}">{{localize 'MB.ShortRest'}}</button>
-                    <button type="button" class="button item-button rest-button" data-label="rest-long"
+                    <button type="button" class="button item-button rest-button rollable" data-label="rest-long"
                     title="{{localize 'MB.LongRest'}}">{{localize 'MB.LongRest'}}</button>
                 </div>
             </div>
