--- a/templates/follower-sheet.html
+++ b/templates/follower-sheet.html
@@ -10,14 +10,13 @@
             <div class="name-row">
                 <input class="actor-name follower-name" name="name" type="text" value="{{actor.name}}" placeholder="{{ localize 'MB.Name' }}"/>
             </div>
-            <div class="altname-row">
-                <input class="altname" name="data.alternateName" type="text" value="{{data.alternateName}}" placeholder="{{ localize 'MB.AlternateName' }}"/>
-            </div>
             <div class="hitpoints-row">
                 <span class="stat-label">{{ localize "MB.HitPoints" }}:</span>
                 <input class="stat-input" name="data.hp.value" type="number" value="{{data.hp.value}}" data-dtype="Number"/>
                 /
                 <input class="stat-input" name="data.hp.max" type="number" value="{{data.hp.max}}" data-dtype="Number"/>
+            </div>
+            <div class="buttons-row">
                 <button type="button" class="roll-button morale rollable">{{localize "MB.Morale"}}</button>
             </div>
         </div>      
